[package]
name = "adventofcode"
version = "0.0.1"
edition = "2021" # edition of cargo not adventofcode lol
authors = ["Simon"]
default-run = "adventofcode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.30"
regex = "1.10.2"
rangemap = "1.4.0"
lazy-regex = "3.1.0"
itertools = "0.12.0"
num = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"